--- a/assets/stylesheets/buttons.scss
+++ b/assets/stylesheets/buttons.scss
@@ -113,6 +113,5 @@ button {
   button {
     border-radius: 100px;
     text-align: center;
-    margin-top: 10px;
   }
 }
